modules/webserver/main.tf
# creating security group
resource "aws_security_group" "myapp-sg" {
    name = "myapp-sg"
    vpc_id = var.vpc_id
    ingress{
        from_port = 22
        to_port = 22
        protocol = "tcp"
        cidr_blocks = [var.my_ip_address]
    }

    ingress {
        from_port = 8080
        to_port = 8080
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }

    egress {
        from_port = 0
        to_port = 0
        protocol = "-1"
        cidr_blocks = ["0.0.0.0/0"]
        prefix_list_ids = []
    }
    
    tags = {
        Name = "${var.env_prefix}-sg"
    }
}

# data "aws_ami" "latest-amazon-linux-image"{
#     most_recent = true
#     owners = ["137112412989"]
#     filter  {
#         name = "name"
#         values = ["al2023-ami-*-x86-64"]
#     }

#     filter  {
#         name = "virtualization-type"
#         values = ["hvm"]
#       }
# }

data "aws_key_pair" "ssh-key"{
    key_pair_id = var.key_pair_id
    # key_name = "test_key"
    # public_key = file(var.my_public_key)
}


resource "aws_instance" "myapp-server"{
    ami = var.image_id
    instance_type = var.instance_type
    subnet_id = var.subnet_id
    vpc_security_group_ids = [aws_security_group.myapp-sg.id]
    availability_zone = var.avail_zone
    associate_public_ip_address = true
    # key_name = aws_key_pair.ssh-key.key_name
    key_name = data.aws_key_pair.ssh-key.key_name
    user_data = file("entry_script.sh")
    tags = {
        Name = "${var.env_prefix}-server"
    }
    # public_dns = 
}
